<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:actionbar="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_history"
        actionbar:showAsAction="always"
        android:icon="@drawable/abc_ic_menu_paste_mtrl_am_alpha"
        android:title="@string/title_activity_history"/>
    <item
        android:id="@+id/action_more"
        actionbar:showAsAction="always"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        android:title="@string/more">
        <menu>
            <item
                android:id="@+id/action_qrcode"
                android:title="@string/title_activity_qrcode"/>
            <item
                android:id="@+id/action_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/action_about"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>