<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="version"
            android:summary="v 1.0"
            android:title="当前版本" />
        <Preference
            android:key="star"
            android:summary="前往项目地址给个Star，鼓励作者"
            android:title="给我点赞" />
    </PreferenceCategory>
    <PreferenceCategory android:title="关于作者">
        <Preference
            android:key="weibo"
            android:summary="@string/about_weibo"
            android:title="微博" />
        <Preference
            android:key="jianshu"
            android:summary="@string/about_jianshu"
            android:title="简书" />
        <Preference
            android:key="github"
            android:summary="@string/about_github"
            android:title="Github" />
    </PreferenceCategory>
    <PreferenceCategory android:title="版权">
        <Preference
            android:summary="快递100"
            android:title="快递数据" />
    </PreferenceCategory>
</PreferenceScreen>