<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/tv_post_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/post_id"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_common" />

        <EditText
            android:id="@+id/et_post_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/tv_post_id_text"
            android:hint="@string/input_post_id"
            android:inputType="textEmailAddress"
            android:paddingRight="50dp"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_common" />

        <ImageView
            android:id="@+id/iv_scan"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_scan" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_edit_text_clear"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_choose_com"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_setting_strip_bg_pressed_effect"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_com_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/company"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_common" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_list_arrow_right" />

        <TextView
            android:id="@+id/tv_com_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@id/iv_arrow"
            android:layout_toRightOf="@id/tv_com_name_text"
            android:hint="@string/choose_company"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_common" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_btn_common_bg"
        android:enabled="false"
        android:text="@string/query"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_common" />

    <LinearLayout
        android:id="@+id/ll_un_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <include layout="@layout/include_divider" />

        <ListView
            android:id="@+id/lv_un_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>